added scroll bar to fish tiles to better read descriptions

--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -5,6 +5,7 @@
   background-color: #29b6f6;
   border: solid;
   border-color: white;
-  float: left
-
+  float: left;
+  overflow-y: auto;
+  max-height: 300px;
 }
