fishname class styling

--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -11,6 +11,10 @@
   font-family: "Fantasy", "papyrus"
 }
 
+.fishname {
+  font-weight: bold;
+}
+
 .descriptbtn {
   font-family: "Fantasy", "papyrus"
 
