--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -16,7 +16,14 @@
 }
 
 .descriptbtn {
-  font-family: "Fantasy", "papyrus"
+  font-family: "Fantasy", "papyrus";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  border: 3px solid blue;
+  margin: 0 auto;
+  display: block;
 
 }
 
