--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -1,18 +1,18 @@
 
 .rectangle {
-  height: 300px;
-  width: 300px;
+  height: 350px;
+  width: 250px;
   background-color: #29b6f6;
   border: solid;
   border-color: white;
   float: left;
   overflow-y: auto;
-  max-height: 300px;
   font-family: "Fantasy", "papyrus"
 }
 
 .fishname {
   font-weight: bold;
+  font-size: 20px;
 }
 
 .descriptbtn {
