changed .descriptbtn to descripbtn

--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -16,7 +16,7 @@
   font-size: 20px;
 }
 
-.descriptbtn {
+.descripbtn {
   font-family: "Fantasy", "papyrus";
   display: flex;
   justify-content: center;
