--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -61,3 +61,17 @@ h2{
   left: 600px;
   text-decoration: underline;
 }
+
+.contactpage{
+  height: 500px;
+  width: 500px;
+  background-color: #29b6f6;
+  border: solid;
+  border-color: white;
+  float: left;
+  overflow-y: auto;
+  font-family: "Fantasy", "papyrus";
+  position: absolute;
+  top: 25%;
+  left: 25%;
+}
