added .textbox1 and .contactinfo

--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -86,3 +86,13 @@ h2{
 .contactlabel{
   font-size: 20px;
 }
+
+.textbox1{
+  position: relative;
+  left: 0%;
+  width: 300px;
+}
+
+.contactinfo{
+  display: block
+}
