--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -105,3 +105,10 @@ h2{
   margin-left: auto;
   margin-right: auto;
 }
+
+.contactbutton{
+  margin-top: 1%;
+  font-size: 20px;
+  text-align: center;
+
+}
