add top margin to contact us submit/exit buttons

--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -135,7 +135,8 @@ h1{
 
 .formbutton{
   position: relative;
-  left: 40%;
+  margin-top: 20px;
+  left: 32%;
   font-size: 20px;
   height: 30px;
   width: 100px;
