--- a/fish-project-frontend/styles/index.css
+++ b/fish-project-frontend/styles/index.css
@@ -14,7 +14,8 @@ background-size: 100% 100%;
   border-width: thick;
   float: left;
   overflow-y: auto;
-  font-family: "Fantasy", "papyrus"
+  font-family: "Fantasy", "papyrus";
+  margin: 3px;
 }
 
 .fishname {
